# DRISHTAM

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile.api  README.md  SECURITY.md  analyze_datasets.py  cloudbuild-api.yaml  deploy.sh  docker-compose.yml  eda_03_cross_analysis.py  pyproject.toml  query_stitch.py  requirements.txt  test_api.py
api/: __init__.py  cloud_data.py  engine_loader.py  main.py  models.py
api/routers/: __init__.py  clusters.py  insights.py  optimizer.py  overview.py  risk.py  segments.py  stations.py  violations.py  whatif.py
archive/eda_scripts/: eda_01_violations.py  eda_02_events.py  eda_04_osm_roads.py
archive/infra/: cloud_setup_and_run.sh  run_phase1.py  setup_gnn_vm.sh
archive/logs/: pipeline_status.txt  pipeline_status_cloud.txt
archive/notebooks/: 03c_gnn_final.ipynb  03c_gnn_final.py  03c_gnn_retrain_gpu.ipynb  03c_gnn_retrain_gpu.py
dashboard/: Dockerfile  README.md  cloudbuild.yaml  next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/clusters/: page.tsx
dashboard/src/app/insights/: page.tsx
dashboard/src/app/map/: page.tsx
dashboard/src/app/stations/: page.tsx
dashboard/src/app/whatif/: page.tsx
dashboard/src/components/: AnimatedCounter.tsx  MiniMapPulse.tsx  ReductionGauge.tsx
dashboard/src/components/Charts/: HourlyChart.tsx  ParetoDonut.tsx  Sparkline.tsx  TopRoadsTable.tsx
dashboard/src/components/Layout/: QueryProvider.tsx  Sidebar.tsx
dashboard/src/components/Map/: ClusterBubbleMap.tsx  ClusterPanel.tsx  PropagationMap.tsx  SegmentMap.tsx  SegmentPanel.tsx
dashboard/src/components/Stations/: StationBoundaryMap.tsx  StationPanel.tsx
dashboard/src/components/Tutorial/: TutorialManager.tsx  steps.ts
dashboard/src/lib/: api.ts  colors.ts  useDebounce.ts
drishtam/: __init__.py  clustering.py  config.py  counterfactual.py  data_pipeline.py  enforcement_optimizer.py  exceptions.py  graph_builder.py  impact_scorer.py  propagation_model.py  risk_forecaster.py  traffic_simulator.py  traffic_zones.py  utils.py  verification.py
plans/: README.md  code_quality_standards.md  file_structure.md  novel_enhancements.md  phase1_data_foundation.md  phase2_impact_scoring.md  phase3_gnn_propagation.md  phase4_whatif_and_forecasting.md  phase5_dashboard_and_deployment.md
research/: 01_violation_eda.md  02_event_eda.md  03_cross_dataset_analysis.md  04_osm_road_network.md  05_research_landscape.md  06_enriched_data_summary.md  07_parking_impact_scores.md  08_gnn_propagation.md  09_digital_twin_simulation.md  10_gnn_twin_retraining.md  11_counterfactuals_and_forecasting.md
scripts/: 01_build_enriched_data.py  02_compute_impact_scores.py  03_build_gnn_graph.py  03b_simulate_traffic.py  03c_retrain_gnn_twin.py  04_train_forecaster.py  05_generate_counterfactuals.py  06_optimize_enforcement.py  quality_check.py
tests/: conftest.py  test_cloud_data.py  test_engine.py  test_models.py  test_routers.py  test_security.py
